# rtb_ipinyou

./: .gitignore  .rsyncignore  LICENSE  MANIFEST.md  Makefile  PLAN.md  README.ko.md  README.md  concept.md  methods.md  pyproject.toml  requirements.txt  review.md
configs/bidding/: default.yaml
configs/debiasing/: win_propensity.yaml
configs/distributed/: multi_gpu.yaml
configs/features/: default.yaml
configs/model/: baseline_lgb.yaml  escm2wc_dr.yaml  escm2wc_ipw.yaml  esmmwc.yaml
configs/training/: default.yaml
docs/: GLOSSARY.md  NUMBERS_LEDGER.md  bid_optimization_report.md  bid_optimization_report_summary.md  evaluation_protocol.md  performance_tuning.md  prediction_report.md  prediction_report_summary.md  scripts_tutorial.md  technical_report.md
docs/archive/: README.md  bid_optimization_report_summary.md  performance_tuning.md  prediction_report_summary.md
docs/research_design/: 01-prediction-models.md  02-win-rate-analysis.md  04-causal-analysis.md  05-serving.md  README.md
experiments/: sweep_escm2wc.yaml  sweep_esmmwc.yaml
mlops/: __init__.py
mlops/monitoring/: __init__.py
mlops/serving/: __init__.py
mlops/tracking/: __init__.py
notebooks/: 01_eda_analysis.ipynb  03_prediction.ipynb  03_prediction_baseline.ipynb  04_prediction_debiasing.ipynb  05_win_rate_market_price.ipynb  07_bid_optimization.ipynb  08_budget_pacing.ipynb  09a_cate_analysis.ipynb  09b_scm_dag.ipynb  demo.html  demo.ipynb
old/: pyproject.toml
old/configs/: config.yaml
old/configs/bidding/: default.yaml
old/configs/distributed/: default.yaml
old/configs/model/: escm2wc_ipw.yaml  esmmwc.yaml
old/configs/ray/: default.yaml
old/configs/serving/: default.yaml
old/docs/: NUMBERS_LEDGER.md  data_setup.md  feature_dictionary.md  redesign_findings.md  rtb_ecosystem.md  technical_report.md
old/docs/archive/: bid_optimization_report.md  prediction_report.md
old/docs/research_design/: 00-data-preparation.md  03-bid-optimization.md  04-causal-analysis.md
old/experiments/: __init__.py  sweep_escm2wc.yaml  sweep_esmmwc.yaml
old/mlops/serving/: Dockerfile  README.md
old/notebooks/: 00_data_preparation.ipynb  02_selection_bias_diagnosis.ipynb  04_prediction_debiasing.ipynb  05_win_rate_market_price.ipynb
old/results/bidding/: strategy_comparison_adv_2259.csv
old/results/models_synthetic/: escm2wc_dr_result.json
old/results/stage_a/: README.md  easy_negatives.json  fair_comparison.json  pacing_fair.json  policy_value_summary.md  reliability.json  segment_calibration.json  stage4_calibration.json  stage_b2_surplus.json
old/scripts/: build_features.py  generate_diagnostics.py  sweep.py  train.py  verify_data.py
old/scripts/portfolio/: make_figures.py
old/scripts/stage_a/: ablation_ladder.py  bidding_fair.py  build_fair_split.py  build_unified_predictions.py  cate_fair.py  fair_baselines.py  pacing_fair.py  policy_value.py  power_analysis.py  reliability.py  segment_calibration.py
old/src/: __init__.py  config.py  config_utils.py
old/src/bidding/: shading.py  simulator.py  value.py
old/src/causal/: __init__.py  cate.py  scm.py
old/src/distributed/: __init__.py  checkpoint.py  data_loader.py  mesh.py
old/src/eda/: parallel_ops.py
old/src/features/: __init__.py  engineering.py  usertag.py
old/src/metrics/: calibration.py  comparison.py  evaluation.py  result_loader.py
old/src/models/: esmm_wc.py
old/src/serving/: app.py
old/tests/: test_calibration.py  test_mesh.py  test_metrics.py
repro/: check.py
results/bidding/: alpha_sensitivity.csv  pacing_comparison.csv  strategy_comparison_adv_2261.csv  strategy_comparison_adv_2821.csv  strategy_comparison_adv_2997.csv  strategy_comparison_first_price.csv
results/market_price_cdf/: summary.json
results/models_synthetic/: escm2wc_ipw_result.json  esmmwc_result.json
results/stage_a/: ablation_ladder.json  bidding_fair.json  cate_fair.json  fair_baselines.json  phase1_findings.md  policy_value.json  power_analysis.json  power_analysis_summary.md  recalibration.json  (+8 more)
scripts/: build_features.py  generate_diagnostics.py  generate_synthetic.py  preprocess.py  regenerate_nb_figures.py  regenerate_surplus_figures.py  sweep.py  sync.sh  train.py
src/: config.py  ray_utils.py  utils.py
tests/: conftest.py  test_base_losses.py  test_bidding.py  test_calibration_metrics.py  test_cluster_inference.py  test_data_loader.py  test_models.py  test_policy_value.py  test_serving.py
witnesses/: neural_anchor.json  neural_anchor.py  phase_diagram.json  phase_diagram.py  probe_debiasing_bidding_value.json  probe_debiasing_bidding_value.py  recal_trap.json  recal_trap.py
(+36 files in other folders)
