[project]
name = "rtb-ipinyou"
version = "0.1.0"
description = "RTB Bid Optimization with Selection Bias Debiasing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Core ML
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.8.0",
    "optax>=0.1.7",
    "orbax-checkpoint>=0.4.0",
    "grain>=0.2.14",

    # Traditional ML
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",

    # Causal Inference
    "econml>=0.15.0",
    "dowhy>=0.11.0",

    # Data Processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "polars>=0.19.0",

    # Distributed Processing
    "ray>=2.9.0",
    "dask>=2023.0.0",

    # Serving
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",

    # Feature Store
    "feast>=0.35.0",
    "redis>=5.0.0",

    # Experiment Tracking
    "wandb>=0.16.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",

    # Utilities
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.1.0",
]

notebook = [
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.1.0",
    "nbformat>=5.9.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
