[project]
name = "rtb-ipinyou"
version = "0.1.0"
description = "RTB Bid Optimization with Selection Bias Debiasing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Lean CPU-safe core (no GPU, no heavy optional stacks).
dependencies = [
    # Data Processing
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "polars>=1.41.2",

    # Traditional ML
    # Pinned <1.7: matches the saved model artifacts (pickled with sklearn 1.6.1)
    # and is compatible with the `causal` extra's econml (requires scikit-learn<1.7),
    # which lets `uv lock` resolve all extras.
    "scikit-learn>=1.6.1,<1.7",
    "lightgbm>=4.6.0",

    # CLI / Config
    "typer>=0.26.7",
    "hydra-core>=1.3.3",
    "omegaconf>=2.3.1",

    # Utilities
    "tqdm>=4.68.2",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",

    # Visualization
    "matplotlib>=3.11.0",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
# Neural-net stack on GPU (CUDA 12). Mutually exclusive with nn-cpu.
nn-gpu = [
    "jax[cuda12]>=0.10.1",
    "flax>=0.12.7",
    "optax>=0.2.8",
    "orbax-checkpoint>=0.12.0",
    "grain>=0.2.17",
]

# Neural-net stack on CPU. Mutually exclusive with nn-gpu.
nn-cpu = [
    "jax[cpu]>=0.10.1",
    "flax>=0.12.7",
    "optax>=0.2.8",
    "orbax-checkpoint>=0.12.0",
    "grain>=0.2.17",
]

# Online serving (FastAPI + ONNX Runtime).
serving = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "onnxruntime>=1.16.0",
]

# Causal inference + survival analysis.
causal = [
    "econml>=0.15.0",
    "dowhy>=0.11.0",
    "lifelines>=0.29.0",
]

# Experiment tracking.
tracking = [
    "wandb>=0.16.0",
]

# Development tooling.
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "httpx2>=2.4.0",  # starlette TestClient HTTP backend (serving tests)
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "smoke: fast, minimal-dependency sanity checks (subset run by `make smoke`)",
    "slow: tests with non-trivial startup cost (e.g. serving artifact loading)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
